test/files/neg/xmltruncated5.scala
object Main {
  <a/> match {
    case <a>
