test/files/neg/xmltruncated5.check
xmltruncated5.scala:3: error: input ended while parsing XML
    case <a>
            ^
one error found
